# proven

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: RESEARCH.md
docs/specs/: 2026-03-26-slr-informed-issues-design.md  2026-03-27-proven-cc-plugin-design.md
examples/: balanced_parentheses.md  binary_search.md  bounded_counter.md  compositional_pipeline.md  compositional_triple.md  extended_gcd.md  insertion_sort.md  m00_orchestrator.md  pipeline_state.md  priority_queue.md  red_black_tree.md  ring_buffer.md  scholar_metrics.md  scholar_postcond_p1.md  scholar_postcond_p2.md  scholar_postcond_p3.md  scholar_postcond_p4.md  scholar_postcond_p5.md  scholar_saturation.md  scholar_section_parser.md  scholar_state_machine.md  sorted_list.md  stack.md  topological_sort.md  unique_set.md
proven/: __init__.py  __main__.py  config.py  dafny.py  decompose.py  interaction.py  llm.py  mentor.py  pipeline.py  prompts.py  stages.py  strategy.py  workspace.py
research/: README.md  ablation_results.json  analyze_ablation.py  experimental-plan.md  full_matrix_results.json  h2h_results.json  issue_adaptive_strategy.md  lit-review-verified-optimization.md  oracle_summary.py  paper-outline.md  results.csv  run_dafny.py  run_sonnet_benchmarks.py  run_tdd_vs_formal.py  tdd_agent.py
research/experiments/: README.md
research/experiments/001-ablation-preprocessing/: DESIGN.md  run_ablation.py
research/experiments/002-tdd-vs-formal/: DESIGN.md  run_head_to_head.py  tdd_agent.py
research/experiments/003-full-matrix/: DESIGN.md  run_all_conditions.py
research/experiments/004-methodology-transfer/: DESIGN.md
research/lit-reviews/: llm-formal-methods.md  proof-first-frameworks.md
research/lit-reviews/procedural-verification/: references.bib  review.md
research/oracle_tests/: conftest.py  test_oracle_balanced_parentheses.py  test_oracle_binary_search.py  test_oracle_bounded_counter.py  test_oracle_pipeline_state.py  test_oracle_priority_queue.py  test_oracle_ring_buffer.py  test_oracle_sorted_list.py  test_oracle_stack.py  test_oracle_unique_set.py
research/shared/: analyze_runs.py  evaluate_oracle.py  freestyle_agent.py
skills/about/: SKILL.md
skills/advise/: SKILL.md
skills/contribute/: SKILL.md
skills/setup/: SKILL.md
skills/survey/: SKILL.md
(+2 files in other folders)
