[project]
name = "proven"
# Note: This versions the Python pipeline package. The Claude Code plugin
# version is tracked separately in .claude-plugin/plugin.json (currently 0.4.0).
version = "0.2.0"
description = "LLM-driven stepwise refinement with Dafny verification"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Lionel Di Giacomo"},
]
readme = "README.md"
keywords = ["formal-verification", "dafny", "llm", "correct-by-construction", "stepwise-refinement"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/melek/proven"
Repository = "https://github.com/melek/proven"

[project.scripts]
proven = "proven.__main__:main"

[tool.setuptools.packages.find]
include = ["proven*"]
